# operon-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  operon-sdk.sln
docs/go/: discovery.md  signing.md  transactions.md  validation.md
dotnet/: README.md
dotnet/Operon.Sdk/: ClientApiConfig.cs  Operon.Sdk.csproj  OperonClient.cs  OperonConfig.cs  PatHelpers.cs  SessionValidationConfig.cs  SessionValidator.cs  WorkstreamDataConfig.cs
dotnet/Operon.Sdk.Tests/: ClientCredentialsTokenProviderTests.cs  ConfigTests.cs  Operon.Sdk.Tests.csproj  OperonClientTests.cs  PatHelpersTests.cs  SessionValidatorTests.cs
go/: .gitignore  README.md  auth.go  client.go  client_channel.go  client_channel_test.go  client_heartbeat.go  client_heartbeat_test.go  client_http.go  client_internal_test.go  client_pat.go  client_pat_test.go  client_reference.go  client_sign.go  client_test.go  client_transactions.go  client_validate.go  client_workstream.go  client_workstream_test.go  config.go  config_test.go  errors.go  errors_test.go  go.mod  session_validate.go  session_validate_test.go  types.go  types_test.go
go/dids/: options.go  resolve.go  resolve_test.go  types.go  verify.go  verify_test.go
go/version/: version.go  version_test.go
java/: README.md  pom.xml
node/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
node/src/: client.ts  config.ts  errors.ts  index.ts  pat.ts  session.ts  transactions.ts  types.ts
node/test/: client.test.ts  config.test.ts  pat-session.test.ts  token-manager.test.ts
python/: README.md
python/operon_sdk/: README.md  __init__.py  client.py  config.py  errors.py  pat.py  pyproject.toml  session.py
python/operon_sdk/auth/: __init__.py  token_provider.py
python/operon_sdk/models/: __init__.py
python/operon_sdk/operon_sdk/: client.py  config.py
python/operon_sdk/operon_sdk/auth/: token_provider.py
python/operon_sdk/tests/: test_client.py  test_config.py  test_pat_session.py  test_token_provider.py
rust/: README.md
rust/operon-sdk/: Cargo.toml  README.md
rust/operon-sdk/src/: client.rs  config.rs  errors.rs  lib.rs  pat.rs  session.rs
rust/operon-sdk/src/auth/: mod.rs  token_provider.rs
rust/operon-sdk/src/models/: mod.rs
rust/operon-sdk/tests/: client.rs  config.rs  pat.rs  session.rs  token_provider.rs
(+106 files in other folders)
