[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operon-sdk"
version = "1.0.0"
description = "Official Operon SDK for Python applications"
license = { text = "Apache-2.0" }
authors = [{ name = "Operon Cloud", email = "support@operon.cloud" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["operon", "sdk", "ledger", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27,<0.29",
    "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
cli = ["typer>=0.12,<1.0"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.23", "respx>=0.21", "anyio>=4.4", "mypy>=1.10", "black>=24.4", "isort>=5.13"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["operon_sdk", "operon_sdk.*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = [".."]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
strict_optional = true
